--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Team_3</string>
+    <string name="menu_home">홈</string>
+    <string name="menu_make">명함제작</string>
+    <string name="menu_friend">친구목록</string>
+    <string name="menu_mypage">마이페이지</string>
 </resources>
