--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="menu_make">명함제작</string>
     <string name="menu_friend">친구목록</string>
     <string name="menu_mypage">마이페이지</string>
+    <string name="freindList">친구목록</string>
 </resources>
